

RELEASE NOTES
=============


2.42.3 - March ??, 2011

    Allow dynamic predicates declared in a category to be called in "this"
    from within the category. In previous versions, such calls would result
    in a compile-time error, forcing these predicates to be called in "self"
    (using the ::/1 message sending control construct).

    Corrected a bug on the code that simplifies the predicate clauses
    generated by the compilation of grammar rules. The code would loop
    when a grammar rule contained a meta-variable, which the Logtalk
    compiler should (but currently don't) report as illegal (the call/1
    control construct should be used instead on this case). Thanks to
    Nicolas Pelletier for the bug report.

    Added a debugger command "p" to the Logtalk built-in debugger. This
    command prints the current goal using the print/1 predicate when
    available. Renamed the debugger command "q" to "Q". Corrected a bug
    where the debugger command "w" would not be recognized. Changed the
    debugger command "d" to quote terms when necessary.

    Added a partial implementation of the ISO Prolog predicate_property/2
    predicate to the ECLiPSe config file.

    Updated the SWI-Prolog config file in order to remove the erroneous
    declaration of the library meta-predicates dde_register_service/2,
    time/1, and when/2 as built-in meta-predicates.

    Applied a bug fix to the "flags" contribution made available by its
    author, Theofrastos Mantadelis. Workaround a compatibility issue with
    GNU Prolog.

    Added a memberchk/2 predicate to the library "setp" protocol and
    "set" object.

    Added support for indexicals to the "constraints/sicstus" example.

    Extended the "delegates" example with a sample implementation of a
    delegator using a parametric object.

    Extended the "dynpred" example in order to illustrate how to define
    category predicates that handle dynamic predicates in the context of