@@ -20,6 +20,9 @@ RELEASE NOTES
     in a compile-time error, forcing these predicates to be called in "self"
     (using the ::/1 message sending control construct).
 
+    Added Logtalk compiler support for pre-compiled clause heads (using the
+    {}/1 control construct).
+
     Corrected a bug on the code that simplifies the predicate clauses
     generated by the compilation of grammar rules. The code would loop
     when a grammar rule contained a meta-variable, which the Logtalk
@@ -46,6 +49,9 @@ RELEASE NOTES
 
     Added a memberchk/2 predicate to the library "setp" protocol and
     "set" object.
+
+    Added an experimental example of using attributed variables within
+    Logtalk objects and categories.
 
     Added support for indexicals to the "constraints/sicstus" example.
 
